[package]
name = "type_walker"
version = "0.1.0"
edition = "2021"

[dependencies]
derive-visitor = { git = "https://github.com/Nadrieril/derive-visitor" }
gat-lending-iterator = "0.1.5"
higher-kinded-types = "0.1.1"
lending-iterator = "0.1.7"
nougat = "0.2.4"
polonius-the-crab = "0.4.1"
take_mut = "0.2.2"
